2007-09-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-content-regexp): Fix regexp.
	(mixi-realize-topic): Follow the change above.

2007-09-17  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-content-regexp): Fix for retrieving photos.

2007-09-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-entity-alist): New constant.
	(mixi-encode-specials-string): New function.
	* mixi-atom.el (mixi-make-atom-entry): Use it.

	* mixi-atom.el (mixi-atom-self): New constant.
	(mixi-make-atom): Use it.

2007-07-25  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-comment-list-regexp): Fix regexp.

2007-07-24  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (with-mixi-retrieve): Follow the change of mixi.
	(with-mixi-post-form): Ditto.
	(mixi-login-form): New constant.
	(with-mixi-retrieve): Use it.
	(with-mixi-post-form): Ditto.

2007-06-20  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-list-regexp): Follow the change of mixi.
	(mixi-get-diaries): Follow the change above.
	(mixi-news-finished-regexp): Follow the change of mixi.

2007-06-19  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-key-regexp): Follow the change of mixi.

2007-06-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-time-regexp): Follow the change of mixi.
	(mixi-event-detail-regexp): Ditto.
	(mixi-event-comment-list-regexp): Ditto.

2007-05-31  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-content-regexp): Follow the change of mixi.
	(mixi-search-diary-list-regexp): Ditto.
	(mixi-topic-content-regexp): Ditto.
	(mixi-event-detail-regexp): Ditto.
	(mixi-diary-comment-list-regexp): Ditto.
	(mixi-topic-comment-list-regexp): Ditto.
	(mixi-event-comment-list-regexp): Ditto.
	(mixi-message-content-regexp): Ditto.

2007-04-26  OHASHI Akira  <bg66@koka-in.org>

	* riece-mixi.el (riece-mixi-send-object-with-url): Don't send a title.

2007-04-19  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-to-regexp): Abolish.